<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_map"
            android:title="@string/map"/>
        <item
            android:id="@+id/message"
            android:icon="@drawable/ic_message"
            android:title="@string/news" />
        <item
            android:id="@+id/parking"
            android:icon="@drawable/ic_parking"
            android:title="@string/park" />
        <item
            android:id="@+id/business"
            android:icon="@drawable/ic_business"
            android:title="@string/business" />
        <item
            android:id="@+id/user"
            android:icon="@drawable/ic_user"
            android:title="@string/me" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/settings" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_information"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
